# squintly

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  README.md  SPEC.md  justfile  railway.toml
docs/: CORPUS_CURATOR_SPEC.md  HANDOFF.md  methodology.md  motivation-and-compensation.md  participant-grading.md
migrations/: 0001_init.sql  0002_grading.sql  0003_engagement.sql  0004_codec_support.sql  0005_auth.sql  0006_v02_rigor.sql  0007_curator.sql  0008_suggestions.sql  0009_curator_source_q.sql
src/: asap.rs  auth.rs  bt.rs  coefficient.rs  curator.rs  db.rs  export.rs  grading.rs  handlers.rs  jpeg_q.rs  lib.rs  licensing.rs  main.rs  sampling.rs  staircase.rs  stats.rs  streaks.rs  suggestion_store.rs  suggestions.rs  unified.rs  variant_gen.rs
tests/: curator.rs  smoke.rs  suggestions.rs
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: api.spec.ts  auth.spec.ts  calibration.spec.ts  codec-filter.spec.ts  curator-fixture.jsonl  curator-r2-live.spec.ts  curator-zfold.spec.ts  curator.spec.ts  global-setup.ts  global-teardown.ts  helpers.ts  mock-coefficient.ts  suggest.spec.ts  trial.spec.ts  welcome.spec.ts
web/src/: api.ts  auth-modal.ts  calibration-onboarding.ts  calibration.ts  codec-probe.ts  conditions.ts  curator-api.ts  curator-encoder.ts  curator.ts  main.ts  style.css  suggest.ts  trial.ts
