[package]
name = "squintly"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
description = "Browser-based psychovisual data collection for zensim — pairwise quality judgments across recorded viewing conditions."
repository = "https://github.com/imazen/squintly"
readme = "README.md"

[[bin]]
name = "squintly"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.9"
sha2 = "0.10"
blake3 = "1"
hex = "0.4"
url = "2"
csv = "1"
rusty-s3 = "0.9.1"
imagesize = "0.14.0"
# Variant generation pipeline (decode → Mitchell resize → JPEG encode → R2).
# zenresize for the resampler — it's the imazen Mitchell-Netravali impl with
# SIMD. Decode/encode use established pure-Rust crates because zen{jpeg,png,
# webp,avif} pin to magetypes/archmage versions that aren't all aligned on
# crates.io as of 2026-05. We can swap to zenjpeg encoding once the
# transitive version skew lands.
zenpixels = "0.2.11"
zenresize = "0.3.1"
jpeg-decoder = "0.3"
jpeg-encoder = "0.6"
png = "0.17"
image-webp = "0.2"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
